crates/ruff/src/rules/flake8_no_pep420/snapshots/ruff__rules__flake8_no_pep420__tests__test_fail_empty.snap
---
source: crates/ruff/src/rules/flake8_no_pep420/mod.rs
expression: diagnostics
---
- - kind:
      name: ImplicitNamespacePackage
      body: "File `./resources/test/fixtures/flake8_no_pep420/test_fail_empty/example.py` is part of an implicit namespace package. Add an `__init__.py`."
      suggestion: ~
      fixable: false
    location:
      row: 1
      column: 0
    end_location:
      row: 1
      column: 0
    fix: ~
    parent: ~

