crates/ruff/src/rules/flake8_no_pep420/snapshots/ruff__rules__flake8_no_pep420__tests__test_fail_shebang.snap
---
source: src/rules/flake8_no_pep420/mod.rs
expression: diagnostics
---
- kind:
    ImplicitNamespacePackage: "../../resources/test/fixtures/flake8_no_pep420/test_fail_shebang/example.py"
  location:
    row: 1
    column: 0
  end_location:
    row: 1
    column: 0
  fix: ~
  parent: ~

